# data-ingestion-pipeline

./: README.md  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: video_creator_stats_dag.py
data/: creators.csv  videos.csv
data/creator_stats/: 2025-12-13.avro
data/creators/: 2025-12-13.avro
data/videos/creator_id=101/: 2025-12-13.avro
data/videos/creator_id=102/: 2025-12-13.avro
data/videos/creator_id=103/: 2025-12-13.avro
data/videos/creator_id=104/: 2025-12-13.avro
data/videos/creator_id=105/: 2025-12-13.avro
data/videos/creator_id=106/: 2025-12-13.avro
data/videos/creator_id=107/: 2025-12-13.avro
data/videos/creator_id=108/: 2025-12-13.avro
data/videos/creator_id=109/: 2025-12-13.avro
data/videos/creator_id=110/: 2025-12-13.avro
data/videos/creator_id=111/: 2025-12-13.avro
data/videos/creator_id=113/: 2025-12-13.avro
data/videos/creator_id=114/: 2025-12-13.avro
data/videos/creator_id=115/: 2025-12-13.avro
include/VideoCreatorStats/: README.md  config.py  process.py  utils.py
include/VideoCreatorStats/DataAnalytics/: TextStatistics.py
include/VideoCreatorStats/Storage/: AvroStorage.py  BaseStorage.py
include/VideoCreatorStats/tests/: test_process.py
