[project]
name = "influur-data-assessment"
version = "0.1.0"
description = ""
authors = [
    {name = "jrab227@gmail.com",email = "jrab227@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "fastavro (>=1.12.1,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "VideoCreatorStats", from = "include" }
]
